# NyxsOwl

./: .codecov.yml  .gitignore  Cargo.toml  Cargo.toml.bak  README.md  run_coverage.sh
.github/workflows/: forecast_trade_coverage.yml  test-coverage.yml  update-dependencies.yml
day_trade/: Cargo.toml  README.md
day_trade/examples/: forecasting_example.rs  forecasting_strategy_example.rs  lib_check.rs  strategy_comparison.rs
day_trade/src/: lib.rs  mock_indicators.rs  utils.rs
day_trade/src/strategies/: mod.rs
day_trade/src/strategies/buy/: README.md  adaptive_moving_average_strategy.rs  breakout_strategy.rs  ma_crossover.rs  macd.rs  mod.rs
day_trade/src/strategies/hold/: README.md  bollinger_bands.rs  dual_timeframe.rs  forecasting_strategy.rs  grid_trading_strategy.rs  mod.rs  multi_indicator_strategy.rs  vwap.rs
day_trade/src/strategies/sell/: README.md  mean_reversion_strategy.rs  mod.rs  rsi.rs  volume_based_strategy.rs
day_trade/tests/: strategies.rs
examples/: explore_libs.rs
forecast_trade/: Cargo.toml  README.md  TESTING.md
forecast_trade/examples/: backtest_strategy.rs  basic_forecast.rs  daily_vs_minute_strategy.rs  forecast_and_trade.rs  simple_forecast.rs  time_granularity_example.rs
forecast_trade/examples/csv/: daily_data.csv
forecast_trade/src/: data.rs  error.rs  lib.rs  metrics.rs  models.rs  strategies.rs  utils.rs  volatility.rs
forecast_trade/src/models/: arima.rs  exponential_smoothing.rs  garch.rs  mod.rs  moving_average.rs
forecast_trade/src/strategies/: README.md  mean_reversion.rs  trend_following.rs  volatility_breakout.rs
forecast_trade/tests/: integration_test.rs  test_data.rs  test_error.rs  test_metrics.rs  test_models.rs  test_strategies.rs  test_utils.rs  test_volatility.rs
minute_trade/: Cargo.toml  README.md  lib.rs  run_example.sh
minute_trade/examples/: scalping_strategy.rs  strategy_comparison.rs  volatility_breakout.rs
minute_trade/src/: lib.rs  utils.rs
minute_trade/src/strategies/: mod.rs
minute_trade/src/strategies/mean_reversion/: mean_reversion_oscillator_strategy.rs  mod.rs  statistical_arbitrage_strategy.rs
minute_trade/src/strategies/momentum/: mod.rs  momentum_breakout_strategy.rs  scalping_strategy.rs
minute_trade/src/strategies/pattern/: chart_pattern_strategy.rs  mod.rs  support_resistance_strategy.rs
minute_trade/src/strategies/statistical/: mod.rs
minute_trade/src/strategies/time_based/: mod.rs
minute_trade/src/strategies/volatility/: bollinger_band_contraction_strategy.rs  mod.rs  volatility_breakout_strategy.rs
minute_trade/src/strategies/volume/: mod.rs
nyxs_owl/: Cargo.toml  README.md
nyxs_owl/src/: lib.rs
src/: lib.rs
trade_math/: Cargo.toml
trade_math/src/: forecasting.rs  lib.rs  moving_averages.rs  oscillators.rs  volatility.rs  volume.rs
