[package]
name = "forecast_trade"
version = "0.1.0"
edition = "2021"
description = "A library for financial time series forecasting and trading strategy development"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
# Time and date handling
chrono = { version = "0.4", features = ["serde"] }

# Data processing
polars = { version = "0.32", features = ["lazy", "temporal", "csv", "parquet"] }
csv = "1.2"

# Error handling
thiserror = "1.0"

# Trading data types
day_trade = { version = "0.1", path = "../day_trade" }
minute_trade = { version = "0.1", path = "../minute_trade" }

# Statistics and math
statrs = "0.16"
rand = "0.8"
rand_distr = "0.4"
num-traits = "0.2"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rstest = "0.18"
pretty_assertions = "1.4"
tempfile = "3.8"

[[example]]
name = "daily_vs_minute_strategy"
path = "examples/daily_vs_minute_strategy.rs"

[[example]]
name = "basic_forecast"
path = "examples/basic_forecast.rs"

[[example]]
name = "backtest_strategy"
path = "examples/backtest_strategy.rs"
