[package]
name = "trade_math"
version = "0.1.0"
edition = "2021"
description = "Mathematical calculations for trading strategies and indicators"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
